# rust-nes

./: .gitignore  Cargo.toml  README.md  mem.txt
desktop/: Cargo.toml
desktop/src/: main.rs
src/: cartridge.rs  controller.rs  cpu.rs  instruction.rs  lib.rs  main.rs  memory.rs  operations.rs  ppu.rs
www/: index.css  index.html  index.js  package-lock.json  package.json
