[package]
name = "nes"
version = "0.1.0"
authors = ["Colin Suckow <colin@suckow.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
bit_field = "0.10.1"
#minifb = "0.19.1"
winit = "0.23.0"
pixels = "0.2.0"
winit_input_helper = "0.8.0"