[package]
name = "nes"
version = "0.1.0"
authors = ["Colin Suckow <colin@suckow.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nesemu"
path = "src/lib.rs"

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
bit_field = "0.10.1"
minifb = "0.19.1"